Personalize my blog

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,5 +1,5 @@
 social:
-  - title: twt
-    href: "https://twitter.com/jdatap"
-  - title: lnk
-    href: "http://john-coene.com"
+  - title: fb
+    href: "https://www.facebook.com/thinh.dohung"
+  - title: linkdin
+    href: "https://www.linkedin.com/in/thinh-hung-a74943132/"
