--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ description: >
 tagline: Peter Senge
 location: Dong Hoi
 date: true
-baseurl: "/blog" # the subpath of your site, e.g. /blog
+baseurl:  # the subpath of your site, e.g. /blog
 url: "http://dohungthinhtin.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
 author: Thinh-Do Hung
 google_analytics: UA-101394056-1
