Update readme + header

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,5 +1,5 @@
 social:
   - title: fb
     href: "https://www.facebook.com/thinh.dohung"
-  - title: linkdin
+  - title: linkedin
     href: "https://www.linkedin.com/in/thinh-hung-a74943132/"
